# madinafont

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example1.html  features.fea  glyphs.mp  madina.cpp  madina.h  madina.mp  parameters.json  shared.cpp  shared.h
.github/: FUNDING.yml
